--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,7 +1,8 @@
 .footer {
-  background-color: #f5f5f5;
-  padding: 20px;
-
+  display: flex;
+  gap: 52px;
+  flex-direction: column;
+  padding: 70px 0;
   &__copyright {
     font-size: 18px;
     color: #3e515b;
@@ -12,9 +13,12 @@
 
   &__nav {
     margin-top: 10px;
+    color: #22232b;
 
     &-list {
       display: flex;
+      gap: 25px;
+
       @media (max-width: 980px) {
         flex-direction: column;
         gap: 20px;
@@ -45,9 +49,9 @@
     &-icons {
       border-radius: 10px;
       background-color: rgb(237, 239, 244);
-      padding: 25px;
-      width: 25px;
-      height: 25px;
+      padding: 19px;
+      width: 21px;
+      height: 21px;
       @media (max-width: 600px) {
         padding: 10px;
         width: 15px;
