--- a/src/components/Server/Server.scss
+++ b/src/components/Server/Server.scss
@@ -1,20 +1,21 @@
 .server {
-  padding: 40px;
+  max-width: 1680px;
+  padding: 40px 33px;
   background-color: #ffff;
   border-radius: 20px;
   margin-bottom: 20px;
 
   &__name {
     font-size: 24px;
-    font-weight: 600;
-    margin-bottom: 30px;
+    font-weight: bold;
+    margin-bottom: 34px;
   }
 
   &__container {
     min-width: 100%;
     display: grid;
     column-gap: 50px;
-    row-gap: 20px;
+    row-gap: 21px;
 
     > :first-child {
       grid-column: span 2;
@@ -27,7 +28,9 @@
     color: #20a8d8;
     font-size: 13px;
     border-bottom: 1px solid #20a8d8;
-    margin: 25px 0;
+    margin-top: 17px;
+    margin-bottom: 31px;
+    padding-bottom: 5px;
   }
 
 
@@ -53,20 +56,16 @@
     }
   }
 
-  @media (max-width: 1200px) {
-    &__network {
-      grid-template-columns: repeat(2, 1fr);
-    }
-  }
-
   &__add {
     max-width: 330px;
     padding: 15px 0;
     text-align: center;
     cursor: pointer;
     border-radius: 10px;
-    border: 1px solid #20a8d8;
+    border: 2px solid #20a8d8;
     margin: 20px 0;
+    font-size: 14px;
+    font-weight: bold;
 
     &:hover {
       background-color: #20a8d8;
@@ -76,14 +75,19 @@
 
   &__information {
     color: #3e515b;
-    margin: 20px 0;
+    margin-bottom: 34px;
+    margin-top: 21px;
     font-size: 14px;
+    font-weight: 400;
   }
 
 
   &__total_sum {
-    font-size: 24px;
-    font-weight: 600;
+    span{
+      font-size: 20px;
+      font-weight: bold;
+    }
+
   }
   &__adding-cart {
     display: flex;
@@ -100,7 +104,6 @@
     text-align: center;
     cursor: pointer;
     border-radius: 10px;
-    margin: 20px 0;
 
     &:hover {
       color: black;
@@ -152,12 +155,14 @@
 .ip__information{
   display: flex;
   gap: 30px;
+  height: 39px;
+  align-items: center;
   &__info-icon{
     width: 37px;
     height: 37px;
   }
   &__info-text{
-    max-width: 360px;
+    max-width: 322px;
     font-size: 14px;
     color: #3e515b;
   }
